fix article h1 spacing issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,6 @@ header h1 {
 	font-size: 4.5rem;
 	color: #f6e9cf;
 	margin: 0;
-	padding-top: 15rem;
 }
 
 main {
@@ -78,7 +77,7 @@ article p, dt, dd {
 .article-picture h1 {
 	font-size: 4rem;
 	text-align: center;
-	padding: 4rem;
+	padding: 3rem;
 }
 
 .article-content {
@@ -141,7 +140,9 @@ footer {
 		grid-column: span 12;
 	}
 	.article-picture h1 {
-		font-size: 50px;
+		font-size: 40px;
+		margin: 0;
+		padding: 0;
 	}
 	.contact-me {
 		font-size: 35px;
